examples/pos/boxunbox.effekt
interface Dummy {}

def mod { dummy : Dummy } {

  val b: () => Int at {dummy} = box { () => (unbox (box { () => 42 }))() }
  b
}

def main() { () }