examples/neg/issue365.effekt
extern interface Cap

// purposefully not pure to trigger a bug
extern def cap() at io: Cap at {} = default { <> }

def main() = {
  def myCap = cap()
  val unboxed: Cap at {} = box myCap;
  ()
}
